--- a/styles.css
+++ b/styles.css
@@ -176,22 +176,23 @@ header {
 }
 
 .logo {
-  width: 52px;
-  height: 52px;
-  border-radius: var(--border-radius-lg);
-  background: var(--bg-gradient-primary);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: white;
-  font-weight: 900;
-  font-size: 1.5rem;
-  box-shadow: var(--shadow-lg);
-  transition: var(--transition);
-  position: relative;
-  overflow: hidden;
+    width: 100x;
+    height: 68px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: var(--border-radius);
+    overflow: hidden;
+    position: relative;
+    transition: var(--transition);
 }
 
+.logo img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+  
 .logo::before {
   content: '';
   position: absolute;
